[package]
name = "rl_ball_sym_pybinds"
version = "3.0.0"
edition = "2021"
rust-version = "1.73"
license = "MIT"
publish = false
exclude = [".github/", "*.bat", "*.sh", ".git*", "*.py", "*.png", "rustfmt.toml", "*.cfg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.rl_ball_sym]
version = "4.0.0"
default-features = false
features = ["compression", "standard", "hoops", "dropshot", "throwback"]

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "abi3-py310"]

[profile.release]
codegen-units=1
lto = true
strip = true
panic = "abort"
