[package]
name = "rl_ball_sym_pybinds"
version = "3.1.1"
edition = "2021"
license = "MIT"
publish = false
exclude = [".github/", "*.bat", "*.sh", ".git*", "*.py", "*.png", "rustfmt.toml", "*.cfg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = "0.22.0"
rl_ball_sym = { version = "4.1.2", features = ["compression"] }

[profile.release]
codegen-units=1
lto = true
strip = true
panic = "abort"
